@@ -9,14 +9,14 @@ after_everything do
     when 'smtp'
       secrets_email = foreman_email = ''
     when 'gmail'
-      secrets_email = "  email_provider_username: <%= ENV[\"GMAIL_USERNAME\"] %>\n  email_provider_password: <%= ENV[\"GMAIL_PASSWORD\"] %>\n  domain_name: <%= ENV[\"DOMAIN_NAME\"] %>"
-       foreman_email = "GMAIL_USERNAME=Your_Username\nGMAIL_PASSWORD=Your_Password\nDOMAIN_NAME=Your_Domain\n"
+      secrets_email = "  email_provider_username: <%= ENV[\"GMAIL_USERNAME\"] %>\n  email_provider_password: <%= ENV[\"GMAIL_PASSWORD\"] %>\n  domain_name: example.com %>"
+       foreman_email = "GMAIL_USERNAME=Your_Username\nGMAIL_PASSWORD=Your_Password\nDOMAIN_NAME=example.com\n"
     when 'sendgrid'
-      secrets_email = "  email_provider_username: <%= ENV[\"SENDGRID_USERNAME\"] %>\n  email_provider_password: <%= ENV[\"SENDGRID_PASSWORD\"] %>\n  domain_name: <%= ENV[\"DOMAIN_NAME\"] %>"
-      foreman_email = "SENDGRID_USERNAME=Your_Username\nSENDGRID_PASSWORD=Your_Password\nDOMAIN_NAME=Your_Domain\n"
+      secrets_email = "  email_provider_username: <%= ENV[\"SENDGRID_USERNAME\"] %>\n  email_provider_password: <%= ENV[\"SENDGRID_PASSWORD\"] %>\n  domain_name: example.com %>"
+      foreman_email = "SENDGRID_USERNAME=Your_Username\nSENDGRID_PASSWORD=Your_Password\nDOMAIN_NAME=example.com\n"
     when 'mandrill'
-      secrets_email = "  email_provider_username: <%= ENV[\"MANDRILL_USERNAME\"] %>\n  email_provider_apikey: <%= ENV[\"MANDRILL_APIKEY\"] %>\n  domain_name: <%= ENV[\"DOMAIN_NAME\"] %>"
-      foreman_email = "MANDRILL_USERNAME=Your_Username\nMANDRILL_APIKEY=Your_API_Key\nDOMAIN_NAME=Your_Domain\n"
+      secrets_email = "  email_provider_username: <%= ENV[\"MANDRILL_USERNAME\"] %>\n  email_provider_apikey: <%= ENV[\"MANDRILL_APIKEY\"] %>\n  domain_name: example.com %>"
+      foreman_email = "MANDRILL_USERNAME=Your_Username\nMANDRILL_APIKEY=Your_API_Key\nDOMAIN_NAME=example.com\n"
   end
   figaro_email  = foreman_email.gsub('=', ': ')
   secrets_d_devise = "  admin_name: First User\n  admin_email: user@example.com\n  admin_password: changeme"
@@ -32,7 +32,7 @@ after_everything do
   ## EMAIL
   inject_into_file 'config/secrets.yml', "\n" + secrets_email, :after => "development:" if rails_4_1?
   ### 'inject_into_file' doesn't let us inject the same text twice unless we append the extra space, why?
-  inject_into_file 'config/secrets.yml', "\n" + secrets_email + " " , :after => "production:" if rails_4_1?
+  inject_into_file 'config/secrets.yml', "\n" + secrets_email + " ", :after => "production:" if rails_4_1?
   append_file '.env', foreman_email if prefer :local_env_file, 'foreman'
   append_file 'config/application.yml', figaro_email if prefer :local_env_file, 'figaro'
   ## DEVISE
@@ -45,14 +45,16 @@ after_everything do
   ## OMNIAUTH
   if prefer :authentication, 'omniauth'
     inject_into_file 'config/secrets.yml', "\n" + secrets_omniauth, :after => "development:" if rails_4_1?
-    inject_into_file 'config/secrets.yml', "\n" + secrets_omniauth, :after => "production:" if rails_4_1?
+    ### 'inject_into_file' doesn't let us inject the same text twice unless we append the extra space, why?
+    inject_into_file 'config/secrets.yml', "\n" + secrets_omniauth + " ", :after => "production:" if rails_4_1?
     append_file '.env', foreman_omniauth if prefer :local_env_file, 'foreman'
     append_file 'config/application.yml', figaro_omniauth if prefer :local_env_file, 'figaro'
   end
   ## CANCAN
   if (prefer :authorization, 'cancan')
     inject_into_file 'config/secrets.yml', "\n" + secrets_cancan, :after => "development:" if rails_4_1?
-    inject_into_file 'config/secrets.yml', "\n" + secrets_cancan, :after => "production:" if rails_4_1?
+    ### 'inject_into_file' doesn't let us inject the same text twice unless we append the extra space, why?
+    inject_into_file 'config/secrets.yml', "\n" + secrets_cancan + " ", :after => "production:" if rails_4_1?
     append_file '.env', foreman_cancan if prefer :local_env_file, 'foreman'
     append_file 'config/application.yml', figaro_cancan if prefer :local_env_file, 'figaro'
   end
